[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpn_calculator"
version = "0.1.0"
description = "RPN calculator"
authors = [{ name = "Tia Lidowski", email = "tiallidowski@gmail.com" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
rpn = "rpn_calculator.rpn_main:run_cli"
